--- a/exemplo.html
+++ b/exemplo.html
@@ -5,6 +5,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Aqui vai o código HTML que fará seu site aparecer.
+    <h1>Aula Git - Professor Henrique</h1>
   </body>
 </html>
